debug notifications on small screens and fix an issue on the progressBar

--- a/inst/entry_level/www/css/case_studies_app.css
+++ b/inst/entry_level/www/css/case_studies_app.css
@@ -2,38 +2,38 @@
 position: relative;
 }
 
-.js-irs-0 .irs-single, 
+.js-irs-0 .irs-single,
 .js-irs-0 .irs-bar-edge,
 .js-irs-0 .irs-bar{
   background: orange;
 }
 
-.js-irs-1 .irs-single, 
-.js-irs-1 .irs-bar-edge, 
+.js-irs-1 .irs-single,
+.js-irs-1 .irs-bar-edge,
 .js-irs-1 .irs-bar{
   background: orange;
 }
 
-.js-irs-2 .irs-single, 
-.js-irs-2 .irs-bar-edge, 
+.js-irs-2 .irs-single,
+.js-irs-2 .irs-bar-edge,
 .js-irs-2 .irs-bar{
   background: orange;
 }
 
-.theme-orange .irs-single, 
-.theme-orange .irs-bar-edge, 
+.theme-orange .irs-single,
+.theme-orange .irs-bar-edge,
 .theme-orange .irs-bar{
   background: orange;
 }
 
 .network_capnone{
-  padding-left: 0; 
+  padding-left: 0;
   padding-right: 0;
   height:100%;
 }
 
 .network_caprat{
-  padding-left: 0; 
+  padding-left: 0;
   padding-right: 0;
   background-image:url('CaPO4_network/rat_wholebody.svg');
   background-size: cover;
@@ -43,7 +43,7 @@ position: relative;
 }
 
 .network_caphuman{
-  padding-left: 0; 
+  padding-left: 0;
   padding-right: 0;
   background-image:url('CaPO4_network/human_wholebody.svg');
   background-size: cover;
@@ -78,26 +78,28 @@ border-radius: 10px;
 box-shadow: 6px 6px 0px black;
 }
 
-#tab { 
-display:inline-block; 
-margin-left: 100px; 
+#tab {
+display:inline-block;
+margin-left: 100px;
 }
 
 #shiny-notification-notifid {
-position: fixed; 
-top: 20%; 
-right: 76% ; 
-width: 20em; 
-opacity: 1; 
-z-index:100;
+position: fixed;
+top: 50%;
+left: 50%;
+margin-top: -50px;
+margin-left: -100px;
+width: 20em;
+opacity: 1;
+z-index: 100;
 }
 
 #shiny-notification-graph_notif {
-position: fixed; 
-top: 30%; 
-left: 70% ; 
-width: 20em; 
-opacity: 1; 
+position: fixed;
+top: 30%;
+left: 70% ;
+width: 20em;
+opacity: 1;
 z-index:100;
 }
 
@@ -113,19 +115,19 @@ z-index:100;
   50% { background-color: #FF0000; -webkit-box-shadow: 0 0 40px #FF0000; }
   100% { background-color: #B20000; -webkit-box-shadow: 0 0 3px #B20000; }
 }
-        
+
 @-moz-keyframes glowing {
   0% { background-color: #B20000; -moz-box-shadow: 0 0 3px #B20000; }
   50% { background-color: #FF0000; -moz-box-shadow: 0 0 40px #FF0000; }
   100% { background-color: #B20000; -moz-box-shadow: 0 0 3px #B20000; }
 }
-                
+
 @-o-keyframes glowing {
   0% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
   50% { background-color: #FF0000; box-shadow: 0 0 40px #FF0000; }
   100% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
 }
-                        
+
 @keyframes glowing {
   0% { background-color: #B20000; box-shadow: 0 0 3px #B20000; }
   50% { background-color: #FF0000; box-shadow: 0 0 40px #FF0000; }
